# SGEN

./: .gitignore  CMakeLists.txt  README.md  local_setup.sh  setup.py  setup.sh
SGEN_Py/: Composite_spine.py  Neuron.py  __init__.py
bindings/: Neuron_binding.cpp  bindings.cpp
bindings/compartments/: Compartment_binding.cpp  Dendritic_segment_binding.cpp  Soma_binding.cpp  Spine_binding.cpp
bindings/engines/: Analytic_engine_binding.cpp  Gillespie_engine.cpp  Morphologic_engine_binding.cpp
cpp_examples/: full_neuron_HP_num.cpp  gillespie.cpp  heterosynaptic_plasticity.cpp  heterosynaptic_plasticity_MC.cpp  heterosynaptic_plasticity_num.cpp  loading_from_swc.cpp  main.cpp  optimised_moments.cpp  pcc_densities_for_different_discretisations.cpp  properly_discretised_linear_neuron.cpp  properly_discretised_simple_neuron.cpp  semiinfinite_dendrite.cpp  semiinfinite_dendrite_ODE.cpp  semiinfinite_dendrite_ODE_sem_test.cpp  semiinfinite_dendrite_ODE_tests.cpp  stationary_moments_for_cosyne.cpp  stationary_moments_theor.cpp  susceptibilities.cpp  time_correlations.cpp  time_correlations_with_MC.cpp
include/: Neuron.hpp
include/compartments/: Compartment.hpp  Dendritic_segment.hpp  Soma.hpp  Spine.hpp
include/engines/analytic/: Analytic_engine.hpp
include/engines/morphologic/: Morphologic_engine.hpp
include/engines/stochastic/: Gillespie_engine.hpp
include/engines/stochastic/events/: Event.hpp
include/junctions/: Den_den_junction.hpp  Den_syn_junction.hpp  Junction.hpp  Som_den_junction.hpp
include/randomisation/: PRNG.hpp
python_examples/: Gillespie_out  gif_movie.py  gillespie_sim.py  manual_neuron_creation.py  protein_concentrations_movie.py  quick_start_tutorial.ipynb  realistic_soma.py  semiinfinite_dendrite.py  swc_file_loading.py  translation_spots.py
src/: Neuron.cpp
src/compartments/: Compartment.cpp  Dendritic_segment.cpp  Soma.cpp  Spine.cpp  Type.cpp
src/engines/analytic/: Analytic_engine.cpp
src/engines/morphologic/: Morphologic_engine.cpp
src/engines/stochastic/: Gillespie_engine.cpp
src/engines/stochastic/events/: Event.cpp  Gene_activation.cpp  Gene_deactivation.cpp  MRNA_creation.cpp  MRNA_decay.cpp  MRNA_hop_backward.cpp  MRNA_hop_forward.cpp  Prot_hop_backward.cpp  Prot_hop_forward.cpp  Protein_creation.cpp  (+1 more)
src/junctions/: Den_den_junction.cpp  Den_syn_junction.cpp  Junction.cpp  Som_den_junction.cpp  Type.cpp
